@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Make it possible to clear old cache
+    - Do not leave garbage in /tmp from tests
+
 0.000014  2020-07-30 22:36:47-07:00 America/Los_Angeles
 
     - Fix some Postgres 'starting up' issues
